--- a/feather.css
+++ b/feather.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'Feather';
-  src:  url('../fonts/feather.eot?3peat8');
-  src:  url('../fonts/feather.eot?3peat8#iefix') format('embedded-opentype'),
-    url('../fonts/feather.ttf?3peat8') format('truetype'),
-    url('../fonts/feather.woff?3peat8') format('woff'),
-    url('../fonts/feather.svg?3peat8#feather') format('svg');
+  src:  url('fonts/feather.eot?3peat8');
+  src:  url('fonts/feather.eot?3peat8#iefix') format('embedded-opentype'),
+    url('fonts/feather.ttf?3peat8') format('truetype'),
+    url('fonts/feather.woff?3peat8') format('woff'),
+    url('fonts/feather.svg?3peat8#feather') format('svg');
   font-weight: normal;
   font-style: normal;
 }
